Fix scaling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 a,
 a.visited {
     color: inherit;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .pdf-relative-link-path {
